add docker files to containerize the app